Aggiunta funzione add treno e find treno